[package]
name = "matrix"
version = "0.1.0"
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "matrix"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
ribbon_nostd = { path = "../ribbon_nostd" }
bit_field = "0.10.1"

[dependencies.avr-device]
version = "0.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ac72adbe6db8900c41681b759ff62a11f2915916"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

