[package]
name = "matrix"
version = "0.1.0"
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "matrix"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.0.0"
bit_field = "0.10.1"

[dependencies.avr-device]
version = "0.3.4"
features = ["atmega328p", "rt"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "8e4ba8f"
features = ["rt", "arduino-uno"]

[dependencies.embedded-hal]
version = "0.2.7"
features = ["unproven"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

